k8s/adminweb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: adminweb
  namespace: jobplatform
spec:
  type: NodePort
  ports:
  - name: adminweb
    port: 5144
    targetPort: 5144
    nodePort: 32244
  selector:
    app: adminweb
